feat: create CRUD of drivers with unit tests
